fix layout problems and clean code

--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -1,16 +1,10 @@
 // fonts
-$font-main: "Lato", sans-serif;
-$font-title: "Fjalla One", sans-serif;
-$font-button: "Fjalla One", sans-serif;
+$font-main: 'Lato', sans-serif;
+$font-title: 'Fjalla One', sans-serif;
 
 // colors backgrounds
 $color-bg: #060d17;
 $color-secondary: rgb(249, 209, 67);
-$color-button: rgb(249, 209, 67);
-
-//colors margins
-$color-show: rgb(249, 209, 67);
-$color-favorites-margin: rgb(205, 207, 214);
 
 // colors fonts
 $color-font: rgb(205, 207, 214);
