--- a/src/stylesheets/layout/_pokemon-list.scss
+++ b/src/stylesheets/layout/_pokemon-list.scss
@@ -5,9 +5,4 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  @include tablet() {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
 }
